# AXOL

./: .gitignore  AXOL.sln  CLAUDE.md  EXTREME_PERFORMANCE_REPORT.md  LICENSE  PERFORMANCE_REPORT.md  QUANTUM_PERFORMANCE_REPORT.md  README.ja.md  README.ko.md  README.md  README.zh.md  THEORY.md  THEORY_MATH.md  THEORY_TEXT_MODEL.md  community_posts.md  pyproject.toml
axol-lang/: BENCH_REPORT.md  Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh.md  bench_ai_data.txt  bench_ai_data2.txt  bench_ai_stderr.txt  bench_ai_stderr2.txt  bench_collapse_results.json  bench_collapse_stderr.txt  bench_gpu_sort_results.json  bench_gpu_sort_stderr.txt  bench_render_sort_results.json  bench_render_sort_stderr.txt  bench_sort_results.json  bench_sort_stderr.txt  hexapod_demo.html  manim_axol_sort.py  plot_ai_bench.py  plot_bench.py  plot_comparison.py  plot_o1.py  plot_o1_real.py  plot_render_sort.py  plot_similarity.py  plot_tradeoff.py  plot_vs_radix.py  wte_chat_state.json
axol-lang/examples/: ai_logic.axol  bench_ai.rs  bench_collapse_spectrum.axol  bench_conflict_resolve.axol  bench_expect_compare.axol  bench_full_pipeline.axol  bench_high_dim.axol  bench_iterate_stress.axol  bench_relation_chain.axol  bench_scaling.axol  bench_v2_stress.axol  classifier.axol  convergent.axol  define_basins.axol  demo.axol  half_adder.axol  hello.axol  hello_v2.axol  learn_xor.axol  test_multi_input.axol  usecase_dialogue.axol  usecase_npc_realtime.axol  usecase_observation_cost.axol  usecase_perception.axol
axol-lang/src/: axol_ai.rs  codegen.rs  collapse.rs  declare.rs  density.rs  dynamics.rs  errors.rs  gpu_scatter.rs  learn.rs  lib.rs  main.rs  observatory.rs  ops.rs  relation.rs  types.rs  wave.rs  weaver.rs
axol-lang/tests/: bench_accuracy.rs  bench_axol_eval.rs  bench_chat.rs  bench_compaction.rs  bench_compose.rs  bench_comprehensive.rs  bench_detailed.rs  bench_dim_usage.rs  bench_mlp_vs_linear.rs  bench_production.rs  bench_space_axis.rs  bench_wte.rs  measure_features.rs  test_axol_ai.rs  test_chat.rs  test_codegen.rs  test_compose.rs  test_examples.rs  test_growth_200.rs  test_learn.rs  test_quantum.rs  test_relation.rs  test_stability.rs  test_wave.rs  test_wte.rs
demo/: index.html  (+7 more)
(+224 files in other folders)
