[package]
name = "axol-lang"
version = "0.1.0"
edition = "2021"
description = "AXOL - Chaos-theory based Declare/Weave/Observe programming language"
license = "MIT"

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
faer = "0.19"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }

[lib]
name = "axol"
path = "src/lib.rs"

[[bin]]
name = "axol"
path = "src/main.rs"

[[bin]]
name = "wte_chat"
path = "src/bin/wte_chat.rs"

[[bin]]
name = "bench_wave"
path = "src/bin/bench_wave.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
